# job-posting-authenticity

./: .gitignore  README.md  pyproject.toml  real-fake-job-desc.ipynb
