[tool.poetry]
name = "real-fake-job-desc"
version = "0.1.0"
description = "Data science project with real/fake job description dataset"
authors = ["Datsudo <76833632+datsudo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
matplotlib = "^3.9.1"
notebook = "^7.2.1"
seaborn = "^0.13.2"
nbconvert = "^7.16.4"
plotly = "^5.22.0"
category-encoders = "^2.6.3"
wordcloud = "^1.9.3"
image = "^1.5.33"
pillow = "^10.4.0"
nltk = "^3.8.1"
spacy = "^3.7.5"
statsmodels = "^0.14.2"
scipy = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
